Multisteal and Mass Snatch rename to Buckshot.

--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -27,14 +27,16 @@ jazz.weapon.snatcher.upgrade.cone=Aim Cone
 jazz.weapon.snatcher.upgrade.cone.desc=Increase the radius of your center aim cone, so you can see and steal with minimal effort
 jazz.weapon.snatcher.upgrade.range=Steal Range
 jazz.weapon.snatcher.upgrade.range.desc=Increase the range from which you can steal things
+jazz.weapon.snatcher.upgrade.multisteal=Multi-Steal
+jazz.weapon.snatcher.upgrade.multisteal.desc=Increase how many props you can steal at the same time
 jazz.weapon.snatcher.upgrade.auto=Auto-Auto Aim
 jazz.weapon.snatcher.upgrade.auto.desc=Hold down left click to automate picking up many props at a time
 jazz.weapon.snatcher.upgrade.world=Ultimate Aim
 jazz.weapon.snatcher.upgrade.world.desc=No matter where you aim, you're picking something up. Hold right click to steal world brushes
 jazz.weapon.snatcher.upgrade.multi=Multitasking
 jazz.weapon.snatcher.upgrade.multi.desc=Multitask by being able to both steal world brushes and props at the same time
-jazz.weapon.snatcher.upgrade.masssnatch=Mass Snatch
-jazz.weapon.snatcher.upgrade.masssnatch.desc=Steal every prop in your view at once.
+jazz.weapon.snatcher.upgrade.masssnatch=Buck-Shot.
+jazz.weapon.snatcher.upgrade.masssnatch.desc=Press R to steal every prop in your aim cone at once.
 jazz.weapon.snatcher.upgrade.wspeed=World Stealing Speed
 jazz.weapon.snatcher.upgrade.wspeed.desc=Steal the world %1%% faster
 #Hacking Goggles
