Capsule Capture Gun
Adds the Capsule Capture Gun, a slow-firing "weapon" intended for use inside the bar that uses Jazz money to fire capture capsules, small projectiles that harmlessly neutralize NPCs (or props, or players...) upon contact.

--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -59,6 +59,10 @@ jazz.weapon.run.upgrade.nofall=Walkin' the Plank-proof
 jazz.weapon.run.upgrade.nofall.desc=If ye fall while yer Run is equipped, yer not takin' even a wee bit'o'fall damage
 jazz.weapon.run.upgrade.highjump=High Jump
 jazz.weapon.run.upgrade.highjump.desc=With yer Run equipped, duck yerself down fer a few seconds ta charge up a super jump!
+#Net Gun
+jazz.weapon.net=Nettin' Flintlock
+jazz.weapon.net.desc=We got us a runn'r!
+jazz.weapon.net.desc.short=We got us a runn'r!
 #misc
 jazz.weapon.buscaller=Portable Port
 jazz.weapon.buscaller.desc=Where we be sailin', we don' need seas
