--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -89,6 +89,10 @@ jazz.weapon.rats.desc=Turn any map into a rats map. Shrink down to fit into tiny
 jazz.weapon.rats.desc.short=Turn any map into a rats map.
 jazz.weapon.rats.upgrade.antstrength=Ant Strength
 jazz.weapon.rats.upgrade.antstrength.desc=While shrunk down, lift heavy* props with ease!\n*as heavy as your normal self can lift
+#Net Gun
+jazz.weapon.net=Capsule Capture Gun
+jazz.weapon.net.desc=We've got a runner!
+jazz.weapon.net.desc.short=We've got a runner!
 #misc
 jazz.weapon.physlua=Lua Physics Gun
 #spawnmenu
